// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas GifExpertApp Cagi 1`] = `
<Fragment>
  <h2>
     Gif Expert App 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Kimetsu No Yaiba"
      key="Kimetsu No Yaiba"
    />
    <GifGrid
      category="Darling in the Franxx"
      key="Darling in the Franxx"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas GifExpertApp Renderizar GifExpertApp 1`] = `
<Fragment>
  <h2>
     Gif Expert App 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
